--- a/src/main/java/resources/application.css
+++ b/src/main/java/resources/application.css
@@ -48,55 +48,19 @@
 .text-field.error {
 	-fx-background-color: -fx-shadow-highlight-color, -fx-text-box-border, FFFF99;
 }
-.list-cell.error {
-	-fx-background-color: -fx-shadow-highlight-color, -fx-text-box-border, FFFF99;
+
+/* Bed selection */
+.hbox.file {
+	-fx-alignment: center-left;
 }
-.list-cell.error:odd {
-    -fx-background-color: derive(FFFF99,-5%);
+.hbox.bed {
+	-fx-alignment: center-left;
 }
-.list-view:focused .list-cell.error:focused {
-    -fx-background-color: -fx-focus-color, -fx-cell-focus-inner-border, -fx-control-inner-background;
-    -fx-background-insets: 0, 1, 2;
+.hbox.bed.error .label {
+	-fx-text-fill: black;
 }
-.list-view:focused .list-cell.error:focused:odd {
-    -fx-background-color: -fx-focus-color, -fx-cell-focus-inner-border, derive(-fx-control-inner-background,-5%);
-    -fx-background-insets: 0, 1, 2;
-}
-.list-view:focused .list-cell.error:filled:focused:selected {
-    -fx-background-color: -fx-focus-color, -fx-cell-focus-inner-border, -fx-selection-bar;
-    -fx-background-insets: 0, 1, 2;
-    -fx-background: -fx-accent;
-    -fx-text-fill: -fx-selection-bar-text;
-}
-.list-view:focused .list-cell.error:filled:selected, .list-view:focused .list-cell.error:filled:selected:hover {
-    -fx-background: -fx-accent;
-    -fx-background-color: -fx-selection-bar;
-    -fx-text-fill: -fx-selection-bar-text;
-}
-.list-view:focused .list-cell.error:filled:focused:selected:hover {
-    -fx-background: -fx-accent;
-    -fx-background-color: -fx-focus-color, -fx-cell-focus-inner-border, -fx-selection-bar;
-    -fx-background-insets: 0, 1, 2;
-    -fx-text-fill: -fx-selection-bar-text;
-}
-.list-cell.error:filled:selected:focused, .list-cell.error:filled:selected, .list-view:horizontal .list-cell.error:filled:selected {
-    -fx-background-color: derive(FFFF99,-25%);
-    -fx-text-fill: -fx-selection-bar-text;
-}
-.list-cell.error:filled:selected:focused:disabled, .list-cell.error:filled:selected:disabled {
-    -fx-opacity: -fx-disabled-opacity;
-}
-.list-cell.error:filled:hover {
-    -fx-background-color: -fx-cell-hover-color;
-    -fx-text-fill: -fx-text-inner-color;
-}
-.list-view:focused .list-cell.error:filled:focused:hover {
-    -fx-background-color: -fx-focus-color, -fx-cell-focus-inner-border, -fx-cell-hover-color;
-    -fx-background-insets: 0, 1, 2;
-    -fx-text-fill: -fx-text-inner-color;
-}
-.list-view:horizontal .list-cell.error:filled:selected, .list-view:horizontal .list-cell.error:filled:selected:hover {
-    -fx-background-color: linear-gradient(to right, derive(-fx-accent,-7%), derive(-fx-accent,-25%));
+.hbox.bed .indexed-cell.error {
+	-fx-text-fill: red;
 }
 
 /* Multiple files selection */
