resources. Moved resources not directly linked to java classes in src/main/resources and src/test/resources.

--- a/src/main/java/ca/qc/ircm/smoothing/SplashScreen.fxml
+++ b/src/main/java/ca/qc/ircm/smoothing/SplashScreen.fxml
@@ -9,6 +9,6 @@
 <HBox styleClass="splash" xmlns:fx="http://javafx.com/fxml">
 	<Label text="%label"/>
 	<stylesheets>
-		<URL value="@../../../../resources/application.css" />
+		<URL value="@../../../../application.css" />
 	</stylesheets>
 </HBox>
