--- a/src/main/java/ca/qc/ircm/smoothing/util/javafx/MessageDialog.fxml
+++ b/src/main/java/ca/qc/ircm/smoothing/util/javafx/MessageDialog.fxml
@@ -22,6 +22,6 @@
 		</HBox>
 	</bottom>
 	<stylesheets>
-		<URL value="@../../../../../../resources/application.css" />
+		<URL value="@../../../../../../application.css" />
 	</stylesheets>
 </BorderPane>
