--- a/src/main/java/ca/qc/ircm/smoothing/util/javafx/MultipleFilesPane.fxml
+++ b/src/main/java/ca/qc/ircm/smoothing/util/javafx/MultipleFilesPane.fxml
@@ -31,6 +31,6 @@
 	</VBox>
 	<Button mnemonicParsing="false" onAction="#removeFiles" text="%remove" />
 	<stylesheets>
-		<URL value="@../../../../../../resources/application.css" />
+		<URL value="@../../../../../../application.css" />
 	</stylesheets>
 </fx:root>
