--- a/src/main/java/ca/qc/ircm/smoothing/util/javafx/ResizablePane.fxml
+++ b/src/main/java/ca/qc/ircm/smoothing/util/javafx/ResizablePane.fxml
@@ -26,6 +26,6 @@
 		</AnchorPane>
 	</children>
 	<stylesheets>
-		<URL value="@../../../../../../resources/application.css" />
+		<URL value="@../../../../../../application.css" />
 	</stylesheets>
 </fx:root>
