--- a/src/main/java/ca/qc/ircm/smoothing/MainPane.fxml
+++ b/src/main/java/ca/qc/ircm/smoothing/MainPane.fxml
@@ -58,6 +58,6 @@
 		</HBox>
 	</bottom>
 	<stylesheets>
-		<URL value="@../../../../resources/application.css" />
+		<URL value="@../../../../application.css" />
 	</stylesheets>
 </fx:root>
