--- a/src/main/java/ca/qc/ircm/smoothing/ProgressDialog.fxml
+++ b/src/main/java/ca/qc/ircm/smoothing/ProgressDialog.fxml
@@ -26,6 +26,6 @@
 		</HBox>
 	</bottom>
 	<stylesheets>
-		<URL value="@../../../../resources/application.css" />
+		<URL value="@../../../../application.css" />
 	</stylesheets>
 </BorderPane>
