Converted application to afterburner.

--- a/src/main/java/ca/qc/ircm/smoothing/gui/bedtable.fxml
+++ b/src/main/java/ca/qc/ircm/smoothing/gui/bedtable.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.layout.*?>
 <?scenebuilder-preview-i18n-resources bedtable.properties?>
 
-<HBox styleClass="bed-files" fx:controller="ca.qc.ircm.smoothing.gui.BedTablePresenter" xmlns:fx="http://javafx.com/fxml">
+<HBox fx:id="view" styleClass="bed-files" fx:controller="ca.qc.ircm.smoothing.gui.BedTablePresenter" xmlns:fx="http://javafx.com/fxml">
 	<Button mnemonicParsing="false" onAction="#browse" text="%browse"/>
 	<TableView fx:id="table" prefHeight="200">
 		<columns>
